@@ -1,13 +1,16 @@
 package com.ait.app.serviceImpl;
 
-
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Optional;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import com.ait.app.dto.MenuItemDto;
+import com.ait.app.dto.MenuItemResponseDto;
 import com.ait.app.exception.MenuItemServiceException;
+import com.ait.app.exception.MenuServiceException;
 import com.ait.app.exception.UserServiceException;
 import com.ait.app.model.MenuItem;
 import com.ait.app.model.Restaurant;
@@ -16,58 +19,155 @@ import com.ait.app.repository.RestaurantRepository;
 import com.ait.app.service.MenuService;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
+
 @Service
 public class MenuServiceImpl implements MenuService {
-	
-    @Autowired
-    private MenuItemRepository  menuItemRepository;
-    
-    @Autowired
-    private RestaurantRepository restaurantRepository;
-    
-    @PersistenceContext 
-    EntityManager entityManager;
-    
+
+	@Autowired
+	private MenuItemRepository menuItemRepository;
+
+	@Autowired
+	private RestaurantRepository restaurantRepository;
+
+	@PersistenceContext
+	EntityManager entityManager;
 
 	@Override
-	public Long addMenuItem(Long restaurantId, MenuItemDto dto) {
-		 Optional<Restaurant> optionalRestaurant =
-	                restaurantRepository.findById(restaurantId);
+	public MenuItem addMenuItem(MenuItemDto dto) {
+		if (dto == null) {
+			throw new MenuServiceException(HttpStatus.BAD_REQUEST, "Menu item details cannot be null");
+		}
 
-	        if (optionalRestaurant.isEmpty()) {
-	            throw new UserServiceException(HttpStatus.NOT_FOUND,"Restaurant not found for id: " + restaurantId);
-	        }
-	        if (dto.getName() == null || dto.getName().isBlank()) {
-	            throw new UserServiceException( HttpStatus.BAD_REQUEST,"Menu item name is required");
-	        }
-	        
-	        if (dto.getHalfPrice() <= 0 || dto.getFullPrice() <= 0) {
-	            throw new UserServiceException( HttpStatus.BAD_REQUEST,"Half price and full price must be greater than 0");
-	        }
-	        
-	        Optional<MenuItem> existingItem = menuItemRepository.findByRestaurantIdAndName(restaurantId,dto.getName());
+		if (dto.getName() == null || dto.getName().trim().isEmpty()) {
+			throw new MenuServiceException(HttpStatus.BAD_REQUEST, "Food name cannot be empty");
+		}
 
-	        if (existingItem.isPresent()) {
-	            throw new UserServiceException(HttpStatus.CONFLICT,"Menu item already exists in this restaurant");
-	        }
-	        
-	        Restaurant restaurant = optionalRestaurant.get();
+		if (dto.getType() == null || dto.getType().trim().isEmpty()) {
+			throw new MenuServiceException(HttpStatus.BAD_REQUEST, "Food type cannot be empty");
+		}
 
-	        MenuItem menuItem = new MenuItem();
+		if (dto.getDescription() == null || dto.getDescription().trim().isEmpty()) {
+			throw new MenuServiceException(HttpStatus.BAD_REQUEST, "Description cannot be empty");
+		}
 
-	        menuItem.setName(dto.getName());
-	        menuItem.setDescription(dto.getDescription());
-	        menuItem.setFullPrice(dto.getFullPrice());
-	        menuItem.setHalfPrice(dto.getHalfPrice());
-	        menuItem.setAvailable(dto.isAvailable());
-	        menuItem.setType(dto.getType());
-	        menuItem.setRestaurant(restaurant);
-	        
-	        MenuItem savedItem = menuItemRepository.save(menuItem);
+		if (dto.getRestaurantId() <= 0) {
+			throw new MenuServiceException(HttpStatus.BAD_REQUEST, "Restaurant id must be greater than 0");
+		}
 
-	        return savedItem.getId();
+		if (dto.getHalfPrice() <= 0) {
+			throw new MenuServiceException(HttpStatus.BAD_REQUEST, "Half price must be greater than 0");
+		}
+
+		if (dto.getFullPrice() <= 0) {
+			throw new MenuServiceException(HttpStatus.BAD_REQUEST, "Full price must be greater than 0");
+		}
+
+		Restaurant restaurant = restaurantRepository.findById((long) dto.getRestaurantId()).orElse(null);
+
+		if (restaurant == null) {
+			throw new MenuServiceException(HttpStatus.NOT_FOUND,
+					"Restaurant not found with id: " + dto.getRestaurantId());
+		}
+
+		Optional<MenuItem> existingItem = menuItemRepository.findByRestaurantIdAndName(dto.getRestaurantId(),
+				dto.getName().trim());
+
+		if (existingItem.isPresent()) {
+			throw new MenuServiceException(HttpStatus.CONFLICT, "Food item already exists in this restaurant");
+		}
+
+		MenuItem item = new MenuItem();
+
+		item.setName(dto.getName().trim());
+		item.setDescription(dto.getDescription().trim());
+		item.setType(dto.getType().trim());
+		item.setHalfPrice(dto.getHalfPrice());
+		item.setFullPrice(dto.getFullPrice());
+		item.setAvailable(dto.isAvailable());
+		item.setRestaurant(restaurant);
+
+		return menuItemRepository.save(item);
 
 	}
+
+	@Override
+	public MenuItemResponseDto viewMenuById(long menuId) {
+		Optional<MenuItem> o = menuItemRepository.findById(menuId);
+
+		if (o.isEmpty()) {
+			throw new MenuServiceException(HttpStatus.NOT_FOUND, "Please Provide Valid ID!");
+		}
+
+		MenuItem menuItem = o.get();
+
+		MenuItemResponseDto menuItemResponseDto = new MenuItemResponseDto();
+		menuItemResponseDto.setName(menuItem.getName());
+		menuItemResponseDto.setDescription(menuItem.getDescription());
+		menuItemResponseDto.setFullPrice(menuItem.getFullPrice());
+		menuItemResponseDto.setHalfPrice(menuItem.getHalfPrice());
+		menuItemResponseDto.setType(menuItem.getType());
+		menuItemResponseDto.setAvailable(menuItem.isAvailable());
+
+		return menuItemResponseDto;
+
+	}
+
+	@Override
+	public List<MenuItemResponseDto> viewAllMenuByRestaurent(long resId) {
+		Optional<Restaurant> restuarent = restaurantRepository.findById(resId);
+		if (restuarent.isEmpty()) {
+
+			throw new MenuServiceException(HttpStatus.NOT_FOUND, "Restaurant Not Found!");
+		}
+
+		Restaurant res = restuarent.get();
+		List<MenuItemResponseDto> list = new ArrayList();
+		for (MenuItem menuItem : res.getMenuItems()) {
+
+			if (menuItem.isAvailable()) {
+
+				MenuItemResponseDto dto = new MenuItemResponseDto();
+				dto.setName(menuItem.getName());
+				dto.setDescription(menuItem.getDescription());
+				dto.setFullPrice(menuItem.getFullPrice());
+				dto.setHalfPrice(menuItem.getHalfPrice());
+				dto.setAvailable(menuItem.isAvailable());
+				dto.setType(menuItem.getType());
+				list.add(dto);
+
+			}
+
+		}
+
+		return list;
+	}
+
+	@Override
+	public void deleteMenuItemById(long resId, long id) {
+
+		Optional<Restaurant> restaurant = restaurantRepository.findById(resId);
+
+		if (restaurant.isEmpty()) {
+			throw new MenuServiceException(HttpStatus.NOT_FOUND, "Restaurant Not Found!");
+		}
+
+		Restaurant res = restaurant.get();
+
+		for (MenuItem menuItem : res.getMenuItems()) {
+
+			if (menuItem.getId() == id) {
+
+				res.getMenuItems().remove(menuItem);
+
+				menuItemRepository.delete(menuItem);
+
+				return;
+			}
+		}
+
+		throw new MenuServiceException(HttpStatus.NOT_FOUND, "Menu Item Not Found!");
+	}
+
 	@Transactional
 	@Override
 	public String updateMenuItemById(long restaurantId, long itemId, String field, String value) {
@@ -83,5 +183,4 @@ public class MenuServiceImpl implements MenuService {
 
 		return "Menu item updated successfully";
 	}
-
 }
